# yt-comments-ai-analyzer

./: .env.example  .gitignore  .prettierrc  LICENSE  README.md  dev-requirements.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  rollup.config.mjs
app/: main.py
app/api/: __init__.py  routes.py
app/core/: config.py  logging.py  openai_client.py  redis_client.py
app/models/: __init__.py  schemas.py
app/services/: agent.py  errors.py  fetch_comments.py  qa.py  search.py  sentiment.py  session.py  summarize.py  vectorize.py
app/services/youtube/: fetch_comments.py  fetch_vid_info.py
mvp/: db.py  models.py  mvp.ipynb  requirements.txt
static/: tailwind.css  tailwind.input.css
static/css/: tailwind.css
static/js/: bundle.js  bundle.js.map  index.js
templates/: base.html  chat.html  chat_partial.html  error_partial.html  index.html  message_partial.html  summary.html  summary_partial.html
tests/: test_routes.py
