[project]
name = "thread-summarizer"
version = "0.1.0"
description = "This project is a FastAPI application that summarizes YouTube comments using AI models."
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.2.3",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.11",
    "tiktoken>=0.9.0",
    "upstash-redis>=1.4.0",
    "uvicorn[standard]>=0.34.2",
]
